svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-2-service-2
  namespace: default
  labels:
    app: nginx-2
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx-2
  type: LoadBalancer
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
